--- a/luvhavencove-store-storefront/package.json
+++ b/luvhavencove-store-storefront/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^18.2.0",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
+    "sharp": "^0.33.5",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
   },
