Creating Docker Compose dev environment
Implement NGINX reverse proxy

--- a/luvhavencove-store/.env.template
+++ b/luvhavencove-store/.env.template
@@ -1,5 +1,20 @@
 JWT_SECRET=something
 COOKIE_SECRET=something
 
-DATABASE_TYPE="postgres"
-REDIS_URL=redis://localhost:6379
+DATABASE_TYPE=postgres
+# DATABASE_URL postgres is in the Docker network
+DATABASE_URL=postgres://postgres:postgres@postgres/luvhavencove
+
+MEDUSA_ADMIN_ONBOARDING_TYPE=nextjs
+STORE_CORS=http://localhost,http://storefront
+ADMIN_CORS=http://localhost,http://backend
+# MEDUSA_ADMIN_BACKEND_URL is the URL to the backend used by the client side admin UI
+MEDUSA_ADMIN_BACKEND_URL=http://localhost/api
+MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=luvhavencove-store-storefront
+
+# REDIS_URL is in the Docker network
+REDIS_URL=redis://redis:6379
+
+# MEILISEARCH_HOST is in the Docker network
+MEILISEARCH_HOST=http://meilisearch:7700
+MEILISEARCH_API_KEY=
