--- a/luvhavencove-store-storefront/.env.template
+++ b/luvhavencove-store-storefront/.env.template
@@ -1,8 +1,9 @@
 # Your Medusa backend, should be updated to where you are hosting your server. Remember to update CORS settings for your server. See – https://docs.medusajs.com/usage/configurations#admin_cors-and-store_cors
-NEXT_PUBLIC_MEDUSA_BACKEND_URL=http://localhost:9000
+# For this repo, the backend URL is located in the Docker network as it is server sided (NextJS)
+NEXT_PUBLIC_MEDUSA_BACKEND_URL=http://backend:9000
 
 # Your store URL, should be updated to where you are hosting your storefront.
-NEXT_PUBLIC_BASE_URL=http://localhost:8000
+NEXT_PUBLIC_BASE_URL=http://localhost
 
 # Your preferred default region. When middleware cannot determine the user region from the "x-vercel-country" header, the default region will be used. ISO-2 lowercase format. 
 NEXT_PUBLIC_DEFAULT_REGION=us
