Clean up Dockerfile

--- a/luvhavencove-store-storefront/Dockerfile
+++ b/luvhavencove-store-storefront/Dockerfile
@@ -1,11 +1,11 @@
 FROM node:lts AS base
-RUN groupmod -g 1001 node && usermod -u 1001 -g 1001 node
+# RUN groupmod -g 1001 node && usermod -u 1001 -g 1001 node
 WORKDIR /app
 
 # download all deps
 FROM base AS ci
 COPY package.json package-lock.json /app/
-RUN npm ci
+RUN npm ci --verbose
 
 # copy over src files to dev
 FROM base AS install
@@ -13,10 +13,10 @@ COPY --from=ci /app/node_modules node_modules
 COPY . /app/
 
 FROM install AS build
-RUN chown -R 1001:1001 /app
-RUN chmod +x /app/run.sh
+RUN chown -R node:node /app && chmod +x /app/run.sh
 
-# RUN mkdir -p /data/public && chown -R 1001:1001 /data/public
+FROM build AS runner
+
 USER node
 
 ENTRYPOINT /app/run.sh
