--- a/luvhavencove-store/.env.template
+++ b/luvhavencove-store/.env.template
@@ -6,14 +6,14 @@ DATABASE_TYPE=postgres
 DATABASE_URL=postgres://postgres:postgres@postgres/luvhavencove
 
 MEDUSA_ADMIN_ONBOARDING_TYPE=nextjs
-STORE_CORS=http://localhost,http://storefront
-ADMIN_CORS=http://localhost,http://backend
+STORE_CORS=http://localhost,http://storefront,https://luvhavencove.com,https://www.luvhavencove.com
+ADMIN_CORS=http://localhost,http://backend,https://luvhavencove.com,https://www.luvhavencove.com
 # MEDUSA_ADMIN_BACKEND_URL is the URL to the backend used by the client side admin UI
 MEDUSA_ADMIN_BACKEND_URL=http://localhost/api
 MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=luvhavencove-store-storefront
 
-# REDIS_URL is in the Docker network
-REDIS_URL=redis://redis:6379
+# REDIS_URL is in the Docker network, update credentials in /docker/secrets/redis.conf accordingly
+REDIS_URL=redis://redis_user:redis_pass@redis:6379
 
 # MEILISEARCH_HOST is in the Docker network
 MEILISEARCH_HOST=http://meilisearch:7700
