--- a/luvhavencove-store-storefront/.env.template
+++ b/luvhavencove-store-storefront/.env.template
@@ -3,7 +3,7 @@
 NEXT_PUBLIC_MEDUSA_BACKEND_URL=http://backend:9000
 
 # Your store URL, should be updated to where you are hosting your storefront.
-NEXT_PUBLIC_BASE_URL=http://localhost
+NEXT_PUBLIC_BASE_URL=http://localhost,https://luvhavencove.com,https://www.luvhavencove.com
 
 # Your preferred default region. When middleware cannot determine the user region from the "x-vercel-country" header, the default region will be used. ISO-2 lowercase format. 
 NEXT_PUBLIC_DEFAULT_REGION=us
@@ -16,7 +16,7 @@ NEXT_PUBLIC_PAYPAL_CLIENT_ID=
 
 # Your MeiliSearch / Algolia keys. See – https://docs.medusajs.com/add-plugins/meilisearch or https://docs.medusajs.com/add-plugins/algolia
 NEXT_PUBLIC_SEARCH_APP_ID=
-NEXT_PUBLIC_SEARCH_ENDPOINT=http://127.0.0.1:7700
+NEXT_PUBLIC_SEARCH_ENDPOINT=http://meilisearch:7700
 NEXT_PUBLIC_SEARCH_API_KEY=
 NEXT_PUBLIC_INDEX_NAME=products
 
