NGINX SNI, restructure secrets, EC2 User Data

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 .env
+.env.*
+!.env.template
+!.env.*.template
 
-docker/secrets/*
-!docker/secrets/*.template
+secrets/*
+!secrets/*.template
 
 *.pem
 *.crt
