--- a/nginx/nginx/nginx.conf
+++ b/nginx/nginx/nginx.conf
@@ -31,10 +31,8 @@ http {
 
     rewrite_log on;
     # Logging
-    # access_log             off;
-    access_log /var/log/nginx/rewrite.log combined;
-    error_log              /var/log/nginx/error.log debug;
-    # error_log              /dev/null;
+    access_log              /var/log/nginx/access.log combined buffer=512k flush=1m;
+    error_log               /var/log/nginx/error.log warn;
 
     # SSL
     ssl_session_timeout    1d;
