--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       context: ./nginx
       dockerfile: Dockerfile
     ports:
-      - "80:80"
-      - "443:443"
+      - "${HTTP_PORT:-80}:80"
+      - "${HTTPS_PORT:-443}:443"
     healthcheck:
       test: service nginx status || exit 1
       interval: 30s
@@ -21,6 +21,7 @@ services:
       - letsencrypt-etc:/etc/letsencrypt
       - letsencrypt-var:/var/lib/letsencrypt
       - webroot:/var/www/_letsencrypt
+      - nginx:/etc/nginx
     develop:
       watch:
         - path: ./nginx/nginx
@@ -106,7 +107,7 @@ services:
       - "5432:5432"
     healthcheck:
       test: pg_isready -U postgres -d luvhavencove
-      interval: 10s
+      interval: 30s
       timeout: 30s
       retries: 5
       start_period: 5s
@@ -129,7 +130,7 @@ services:
       - redis.conf
     healthcheck:
       test: redis-cli --raw incr ping
-      interval: 10s
+      interval: 30s
       timeout: 30s
       retries: 5
       start_period: 5s
@@ -143,7 +144,7 @@ services:
       - "7700:7700"
     healthcheck:
       test: curl --fail http://localhost:7700/health || exit 1
-      interval: 10s
+      interval: 30s
       timeout: 30s
       retries: 5
       start_period: 5s
@@ -158,7 +159,9 @@ services:
       - shared_data:/data/shared
     networks:
       - nginx
+  
 volumes:
+  nginx:
   pgdata:
   redisdata:
   shared_data:
@@ -167,6 +170,8 @@ volumes:
   letsencrypt-var:
   webroot:
 secrets:
+  cloudflare_api_token:
+    file: ./docker/secrets/cloudflare_api_token.ini
   meilisearch_master_key:
     file: ./docker/secrets/meilisearch_master_key
   paypal_client_id:
