--- a/luvhavencove-store/.env.production.template
+++ b/luvhavencove-store/.env.production.template
@@ -3,13 +3,13 @@ COOKIE_SECRET=something
 
 DATABASE_TYPE=postgres
 # DATABASE_URL postgres is in the Docker network
-DATABASE_URL=postgres://postgres:postgres@postgres/luvhavencove
+DATABASE_URL=postgres://postgres:production@postgres/luvhavencove
 
 MEDUSA_ADMIN_ONBOARDING_TYPE=nextjs
-STORE_CORS=http://localhost,http://storefront,https://luvhavencove.com,https://www.luvhavencove.com
-ADMIN_CORS=http://admin.localhost:8080,http://backend,https://dashboard.luvhavencove.com,https://dashboard.luvhavencove.com
+STORE_CORS=http://storefront,https://luvhavencove.com,https://www.luvhavencove.com
+ADMIN_CORS=http://backend,https://dashboard.luvhavencove.com,https://dashboard.luvhavencove.com
 # MEDUSA_ADMIN_BACKEND_URL is the URL to the backend used by the client side admin UI
-MEDUSA_ADMIN_BACKEND_URL=http://api.localhost:8080
+MEDUSA_ADMIN_BACKEND_URL=http://api.luvhavencove:8080
 MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=luvhavencove-store-storefront
 
 # REDIS_URL is in the Docker network, update credentials in /docker/secrets/redis.conf accordingly
@@ -20,5 +20,5 @@ MEILISEARCH_HOST=http://meilisearch:7700
 MEILISEARCH_API_KEY=
 
 # Set admin email and username. Use a secure password in production
-ADMIN_EMAIL=admin@luvhavencove.com
-ADMIN_PASSWORD=password
+ADMIN_EMAIL=production@luvhavencove.com
+ADMIN_PASSWORD=production
