--- a/nginx/nginx/sites-available/luvhavencove.com.conf
+++ b/nginx/nginx/sites-available/luvhavencove.com.conf
@@ -1,50 +1,84 @@
-# server {
-#     http2 on;
-#     listen 443; # ssl;
-#     listen [::]:443; # ssl;
-#     server_name www.luvhavencove.com;
+# Backend API
+server {
+    http2 on;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name api.luvhavencove.com;
 
-#     # SSL
-#     ssl_certificate /etc/letsencrypt/live/luvhavencove.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/luvhavencove.com/privkey.pem;
-#     ssl_trusted_certificate /etc/letsencrypt/live/luvhavencove.com/chain.pem;
+    ssl_certificate         /etc/letsencrypt/live/luvhavencove.com/fullchain.pem;
+    ssl_certificate_key     /etc/letsencrypt/live/luvhavencove.com/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/luvhavencove.com/chain.pem;
 
-#     # security
-#     include nginxconfig.io/security.conf;
-#     # logging
-#     access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
-#     error_log /var/log/nginx/error.log warn;
-#     # reverse proxy
-#     include nginxconfig.io/reverseproxy.conf;
-#     # additional config
-#     include nginxconfig.io/general.conf;
-# }
-# # non-www, subdomains redirect
-# server {
-#     http2 on;
-#     listen 443; # ssl;
-#     listen [::]:443; # ssl;
-#     server_name .luvhavencove.com;
-#     # SSL
-#     ssl_certificate /etc/letsencrypt/live/luvhavencove.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/luvhavencove.com/privkey.pem;
-#     ssl_trusted_certificate /etc/letsencrypt/live/luvhavencove.com/chain.pem;
-#     return 301 https://www.luvhavencove.com$request_uri;
-# }
+    location / {
+        proxy_pass http://backend:9000/;
+        proxy_set_header Host $host;
+        include nginxconfig.io/proxy.conf;
+    }
+    # additional config
+    include nginxconfig.io/general.conf;
+}
+# Admin Frontend
+server {
+    http2 on;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name admin.luvhavencove.com;
+    
+    ssl_certificate         /etc/letsencrypt/live/luvhavencove.com/fullchain.pem;
+    ssl_certificate_key     /etc/letsencrypt/live/luvhavencove.com/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/luvhavencove.com/chain.pem;
+
+    location /app/ {
+        proxy_pass http://backend:7001;
+        proxy_set_header Host $host;
+        include nginxconfig.io/proxy.conf;
+    }
+    location / {
+        return 301 /app/;
+    }
+    # additional config
+    include nginxconfig.io/general.conf;
+}
+# Storefront
+server {
+    http2 on;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name www.luvhavencove.com;
+    
+    ssl_certificate         /etc/letsencrypt/live/luvhavencove.com/fullchain.pem;
+    ssl_certificate_key     /etc/letsencrypt/live/luvhavencove.com/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/luvhavencove.com/chain.pem;
+    
+    location / {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        include nginxconfig.io/proxy.conf;
+    }
+    # additional config
+    include nginxconfig.io/general.conf;
+}
+# non-www, subdomains redirect
+server {
+    http2 on;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name .luvhavencove.com;
+    
+    ssl_certificate         /etc/letsencrypt/live/luvhavencove.com/fullchain.pem;
+    ssl_certificate_key     /etc/letsencrypt/live/luvhavencove.com/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/luvhavencove.com/chain.pem;
+    
+    return 301 https://www.luvhavencove.com$request_uri;
+}
 # HTTP redirect
-# server {
-#     listen 80;
-#     listen [::]:80;
-#     server_name .luvhavencove.com;
-#     include nginxconfig.io/letsencrypt.conf;
-#     location / {
-#         return 301 https://www.luvhavencove.com$request_uri;
-#     }
-# }
 server {
     listen 80;
-    server_name localhost;
+    listen [::]:80;
+    server_name .luvhavencove.com;
     include nginxconfig.io/letsencrypt.conf;
 
-    include nginxconfig.io/reverseproxy.conf;
+    location / {
+        return 301 https://www.luvhavencove.com$request_uri;
+    }
 }
