--- a/luvhavencove-store/.env.template
+++ b/luvhavencove-store/.env.template
@@ -22,3 +22,8 @@ MEILISEARCH_API_KEY=
 # Set admin email and username. Use a secure password in production
 ADMIN_EMAIL=admin@luvhavencove.com
 ADMIN_PASSWORD=password
+
+PAYPAL_SANDBOX=true
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
+PAYPAL_AUTH_WEBHOOK_ID=
