--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,6 @@
-DOMAIN=localhost.local
-DOMAIN_EMAIL=luvhavencove@localhost.local
-CERTBOT_ARGS=--dns-cloudflare --dns-cloudflare-credentials ~/.secrets/certbot/cloudflare_api_token.ini
-# CERTBOT_ARGS=--staging --dns-cloudflare --dns-cloudflare-credentials ~/.secrets/certbot/cloudflare_api_token.ini
-ENV=dev
+ENV=development
+
+HTTP_PORT=80
+HTTPS_PORT=443
+
+DOMAIN=luvhavencove.com
