--- a/luvhavencove-store-storefront/.env.production.template
+++ b/luvhavencove-store-storefront/.env.production.template
@@ -8,14 +8,17 @@ NEXT_PUBLIC_BASE_URL=http://www.luvhavencove.com
 NEXT_PUBLIC_DEFAULT_REGION=us
 
 # Your Stripe public key. See – https://docs.medusajs.com/add-plugins/stripe
+# ideally added as secret
 NEXT_PUBLIC_STRIPE_KEY=
 
 # Your PayPal Client ID. See – https://docs.medusajs.com/add-plugins/paypal
+# ideally added as secret
 NEXT_PUBLIC_PAYPAL_CLIENT_ID=
 
 # Your MeiliSearch / Algolia keys. See – https://docs.medusajs.com/add-plugins/meilisearch or https://docs.medusajs.com/add-plugins/algolia
 NEXT_PUBLIC_SEARCH_APP_ID=
 NEXT_PUBLIC_SEARCH_ENDPOINT=http://meilisearch:7700
+# ideally added as secret
 NEXT_PUBLIC_SEARCH_API_KEY=
 NEXT_PUBLIC_INDEX_NAME=products
 
