--- a/luvhavencove-store/.env.template
+++ b/luvhavencove-store/.env.template
@@ -23,7 +23,10 @@ MEILISEARCH_API_KEY=
 ADMIN_EMAIL=admin@luvhavencove.com
 ADMIN_PASSWORD=password
 
+# change to false for production deployment
 PAYPAL_SANDBOX=true
 PAYPAL_CLIENT_ID=
+# ideally added as a secret
 PAYPAL_CLIENT_SECRET=
+# ideally added as a secret
 PAYPAL_AUTH_WEBHOOK_ID=
