Streamline .env and secrets templating

--- a/.env.production.template
+++ b/.env.production.template
@@ -3,4 +3,33 @@ ENV=production
 HTTP_PORT=80
 HTTPS_PORT=443
 
+REDIS_USER=redis
+REDIS_PASSWORD=redis
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=luvhavencove
+
+# Backend variables start
+JWT_SECRET=something
+COOKIE_SECRET=something
+
+STORE_CORS=https://luvhavencove.com,https://www.luvhavencove.com
+ADMIN_CORS=https://dashboard.luvhavencove.com,https://dashboard.luvhavencove.com
+# MEDUSA_ADMIN_BACKEND_URL is the URL to the backend used by the client side admin UI
+MEDUSA_ADMIN_BACKEND_URL=http://api.luvhavencove:8080
+# Backend variables end
+
+# Storefront variables start
+NEXT_PUBLIC_BASE_URL=http://www.luvhavencove.com
+# Storefront variables end
+
+MEILISEARCH_MASTER_KEY=meilisearch
+
+PAYPAL_CLIENT_ID=paypal
+PAYPAL_CLIENT_SECRET=paypal
+PAYPAL_AUTH_WEBHOOK_ID=paypal
+
+CLOUDFLARE_API_TOKEN=cloudflare
+
 DOMAIN=luvhavencove.com
