--- a/luvhavencove-store/.env.template
+++ b/luvhavencove-store/.env.template
@@ -1,19 +1,19 @@
-JWT_SECRET=something
-COOKIE_SECRET=something
+JWT_SECRET=${JWT_SECRET}
+COOKIE_SECRET=${COOKIE_SECRET}
 
 DATABASE_TYPE=postgres
 # DATABASE_URL postgres is in the Docker network
-DATABASE_URL=postgres://postgres:postgres@postgres/luvhavencove
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres/${POSTGRES_DB}
 
 MEDUSA_ADMIN_ONBOARDING_TYPE=nextjs
-STORE_CORS=http://localhost,http://storefront,https://luvhavencove.com,https://www.luvhavencove.com
-ADMIN_CORS=http://admin.localhost:8080,http://backend,https://dashboard.luvhavencove.com,https://dashboard.luvhavencove.com
+STORE_CORS=http://localhost,${STORE_CORS}
+ADMIN_CORS=http://admin.localhost:8080,${ADMIN_CORS}
 # MEDUSA_ADMIN_BACKEND_URL is the URL to the backend used by the client side admin UI
-MEDUSA_ADMIN_BACKEND_URL=http://api.localhost:8080
+MEDUSA_ADMIN_BACKEND_URL=${MEDUSA_ADMIN_BACKEND_URL}
 MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=luvhavencove-store-storefront
 
 # REDIS_URL is in the Docker network, update credentials in /docker/secrets/redis.conf accordingly
-REDIS_URL=redis://redis_user:redis_pass@redis:6379
+REDIS_URL=redis://${REDIS_USER}:${REDIS_PASSWORD}@redis:6379
 
 # MEILISEARCH_HOST is in the Docker network
 MEILISEARCH_HOST=http://meilisearch:7700
@@ -25,8 +25,6 @@ ADMIN_PASSWORD=password
 
 # change to false for production deployment
 PAYPAL_SANDBOX=true
-PAYPAL_CLIENT_ID=
-# ideally added as a secret
+PAYPAL_CLIENT_ID=${PAYPAL_CLIENT_ID}
 PAYPAL_CLIENT_SECRET=
-# ideally added as a secret
-PAYPAL_AUTH_WEBHOOK_ID=
+PAYPAL_AUTH_WEBHOOK_ID=${PAYPAL_AUTH_WEBHOOK_ID}
