--- a/luvhavencove-store/package.json
+++ b/luvhavencove-store/package.json
@@ -22,8 +22,7 @@
     "seed": "cross-env medusa seed -f ./data/seed.json",
     "start": "cross-env npm run build && medusa start",
     "start:custom": "cross-env npm run build && node --preserve-symlinks --trace-warnings index.js",
-    "dev": "cross-env npm run build:server && medusa develop",
-    "dev:admin": "cross-env npm run build:admin && medusa-admin develop"
+    "dev": "cross-env npm run build:server && medusa develop"
   },
   "dependencies": {
     "@medusajs/admin": "^7.1.15",
