--- a/secrets/redis.conf.template
+++ b/secrets/redis.conf.template
@@ -1,5 +1,5 @@
 # https://redis.io/docs/latest/operate/oss_and_stack/management/security/acl/
 # This configuration names the user 'redis', 'on' enables the user, '>redis_pass' adds 'redis_pass' as a password to that user, '~*' allows all keys, 'allcommands' allows all commands
-user redis_user on >redis_pass ~* allcommands
+user ${REDIS_USER} on >${REDIS_PASSWORD} ~* allcommands
 # Disables default user
 user default off
