--- a/.env.template
+++ b/.env.template
@@ -3,32 +3,32 @@ ENV=development
 HTTP_PORT=80
 HTTPS_PORT=443
 
-__REDIS_USER=redis
-__REDIS_PASSWORD=redis
+REDIS_USER=redis
+REDIS_PASSWORD=redis
 
-__POSTGRES_USER=postgres
-__POSTGRES_PASSWORD=postgres
-__POSTGRES_DB=luvhavencove
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=luvhavencove
 
 # Backend variables start
-__JWT_SECRET=something
-__COOKIE_SECRET=something
+JWT_SECRET=something
+COOKIE_SECRET=something
 
-__STORE_CORS=https://luvhavencove.com,https://www.luvhavencove.com
-__ADMIN_CORS=https://dashboard.luvhavencove.com,https://dashboard.luvhavencove.com
+STORE_CORS=https://luvhavencove.com,https://www.luvhavencove.com
+ADMIN_CORS=https://dashboard.luvhavencove.com,https://dashboard.luvhavencove.com
 # MEDUSA_ADMIN_BACKEND_URL is the URL to the backend used by the client side admin UI
-__MEDUSA_ADMIN_BACKEND_URL=http://api.localhost:8080
+MEDUSA_ADMIN_BACKEND_URL=http://api.localhost:8080
 # Backend variables end
 
 # Storefront variables start
-__NEXT_PUBLIC_BASE_URL=http://localhost:8080
+NEXT_PUBLIC_BASE_URL=http://localhost:8080
 # Storefront variables end
 
-__MEILISEARCH_MASTER_KEY=meilisearch
+MEILISEARCH_MASTER_KEY=meilisearch
 
-__PAYPAL_CLIENT_ID=paypal
-__PAYPAL_CLIENT_SECRET=paypal
-__PAYPAL_AUTH_WEBHOOK_ID=paypal
+PAYPAL_CLIENT_ID=paypal
+PAYPAL_CLIENT_SECRET=paypal
+PAYPAL_AUTH_WEBHOOK_ID=paypal
 
 __CLOUDFLARE_API_TOKEN=cloudflare
 
