Update for Certbot and NGINX TLS configuration

--- a/.env.production.template
+++ b/.env.production.template
@@ -30,6 +30,7 @@ PAYPAL_CLIENT_ID=paypal
 PAYPAL_CLIENT_SECRET=paypal
 PAYPAL_AUTH_WEBHOOK_ID=paypal
 
+CLOUDFLARE_EMAIL=admin@luvhavecove.com
 CLOUDFLARE_API_TOKEN=cloudflare
 
 DOMAIN=luvhavencove.com
