--- a/.env.template
+++ b/.env.template
@@ -30,6 +30,7 @@ PAYPAL_CLIENT_ID=paypal
 PAYPAL_CLIENT_SECRET=paypal
 PAYPAL_AUTH_WEBHOOK_ID=paypal
 
-__CLOUDFLARE_API_TOKEN=cloudflare
+CLOUDFLARE_EMAIL=admin@luvhavecove.com
+CLOUDFLARE_API_TOKEN=cloudflare
 
 DOMAIN=luvhavencove.com
