Deployable with Cloudflare Tunnel

--- a/.env.production.template
+++ b/.env.production.template
@@ -17,7 +17,7 @@ COOKIE_SECRET=something
 STORE_CORS=https://luvhavencove.com,https://www.luvhavencove.com
 ADMIN_CORS=https://dashboard.luvhavencove.com,https://dashboard.luvhavencove.com
 # MEDUSA_ADMIN_BACKEND_URL is the URL to the backend used by the client side admin UI
-MEDUSA_ADMIN_BACKEND_URL=http://api.luvhavencove:8080
+MEDUSA_ADMIN_BACKEND_URL=http://api.luvhavencove
 # Backend variables end
 
 # Storefront variables start
@@ -29,3 +29,5 @@ MEILISEARCH_MASTER_KEY=meilisearch
 PAYPAL_CLIENT_ID=paypal
 PAYPAL_CLIENT_SECRET=paypal
 PAYPAL_AUTH_WEBHOOK_ID=paypal
+
+TUNNEL_TOKEN=token
