--- a/.env.template
+++ b/.env.template
@@ -17,7 +17,7 @@ COOKIE_SECRET=something
 STORE_CORS=https://luvhavencove.com,https://www.luvhavencove.com
 ADMIN_CORS=https://dashboard.luvhavencove.com,https://dashboard.luvhavencove.com
 # MEDUSA_ADMIN_BACKEND_URL is the URL to the backend used by the client side admin UI
-MEDUSA_ADMIN_BACKEND_URL=http://api.localhost:8080
+MEDUSA_ADMIN_BACKEND_URL=http://localhost:9000
 # Backend variables end
 
 # Storefront variables start
