--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -13,6 +13,9 @@ services:
         required: false
     environment:
       - NODE_ENV=production
+  postgres:
+    volumes:
+      - ./.data/production:/var/lib/postgresql/data
 secrets:
   meilisearch_master_key:
     file: ./secrets/production/meilisearch_master_key
