--- a/luvhavencove-store/.env.production.template
+++ b/luvhavencove-store/.env.production.template
@@ -6,8 +6,8 @@ DATABASE_TYPE=postgres
 DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres/${POSTGRES_DB}
 
 MEDUSA_ADMIN_ONBOARDING_TYPE=nextjs
-STORE_CORS=http://storefront,${STORE_CORS}
-ADMIN_CORS=http://backend,${ADMIN_CORS}
+STORE_CORS=http://localhost,http://localhost:8000,http://storefront,${STORE_CORS}
+ADMIN_CORS=http://localhost,http://localhost:7001,http://backend,${ADMIN_CORS}
 # MEDUSA_ADMIN_BACKEND_URL is the URL to the backend used by the client side admin UI
 MEDUSA_ADMIN_BACKEND_URL=${MEDUSA_ADMIN_BACKEND_URL}
 MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=luvhavencove-store-storefront
