Fixed onboarding flow

--- a/.env.production.template
+++ b/.env.production.template
@@ -17,11 +17,13 @@ COOKIE_SECRET=something
 STORE_CORS=https://luvhavencove.com,https://www.luvhavencove.com
 ADMIN_CORS=https://dashboard.luvhavencove.com,https://dashboard.luvhavencove.com
 # MEDUSA_ADMIN_BACKEND_URL is the URL to the backend used by the client side admin UI
-MEDUSA_ADMIN_BACKEND_URL=http://api.luvhavencove
+MEDUSA_ADMIN_BACKEND_URL=https://api.luvhavencove.com
+MEDUSA_ADMIN_STOREFRONT_URL=https://www.luvhavencove.com
 # Backend variables end
 
 # Storefront variables start
 NEXT_PUBLIC_BASE_URL=http://www.luvhavencove.com
+NEXT_PUBLIC_ADMIN_URL=
 # Storefront variables end
 
 MEILISEARCH_MASTER_KEY=meilisearch
