--- a/luvhavencove-store-storefront/.env.template
+++ b/luvhavencove-store-storefront/.env.template
@@ -3,6 +3,7 @@ NEXT_PUBLIC_MEDUSA_BACKEND_URL=http://backend:9000
 
 # Your store URL, should be updated to where you are hosting your storefront.
 NEXT_PUBLIC_BASE_URL=${NEXT_PUBLIC_BASE_URL}
+NEXT_PUBLIC_ADMIN_URL=${NEXT_PUBLIC_ADMIN_URL}
 
 # Your preferred default region. When middleware cannot determine the user region from the "x-vercel-country" header, the default region will be used. ISO-2 lowercase format. 
 NEXT_PUBLIC_DEFAULT_REGION=us
