--- a/luvhavencove-store/.env.production.template
+++ b/luvhavencove-store/.env.production.template
@@ -10,6 +10,7 @@ STORE_CORS=http://localhost,http://localhost:8000,http://storefront,${STORE_CORS
 ADMIN_CORS=http://localhost,http://localhost:7001,http://backend,${ADMIN_CORS}
 # MEDUSA_ADMIN_BACKEND_URL is the URL to the backend used by the client side admin UI
 MEDUSA_ADMIN_BACKEND_URL=${MEDUSA_ADMIN_BACKEND_URL}
+MEDUSA_ADMIN_STOREFRONT_URL=${MEDUSA_ADMIN_STOREFRONT_URL}
 MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=luvhavencove-store-storefront
 
 # REDIS_URL is in the Docker network, update credentials in /docker/secrets/redis.conf accordingly
